--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -79,6 +79,7 @@
   <string name="BucketedThreadMedia_This_week">Wythnos hon</string>
   <string name="BucketedThreadMedia_This_month">Mis yma</string>
   <string name="BucketedThreadMedia_Large">Mawr</string>
+  <string name="BucketedThreadMedia_Medium">Canolig</string>
   <string name="BucketedThreadMedia_Small">Bach</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Galwad i mewn</string>
@@ -106,6 +107,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Heb ganfod porwr gwe.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Mae galwad ffôn eisoes ar waith</string>
+  <string name="CommunicationActions_start_video_call">Cychwyn galwad fideo?</string>
+  <string name="CommunicationActions_start_voice_call">Cychwyn galwad llais?</string>
   <string name="CommunicationActions_cancel">Diddymu</string>
   <string name="CommunicationActions_call">Galw</string>
   <!--ConfirmIdentityDialog-->
@@ -332,6 +335,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="DeviceListItem_last_active_s">Gweithgar diwethaf %s</string>
   <string name="DeviceListItem_today">Heddiw</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">Ffeil dienw</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimeiddio ar gyfer Play Services coll</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Nid yw\'r ddyfais hon yn cefnogi Play Services Tapiwch i analluogi gwelliannau batri system sy\'n atal Signal rhag adfer negeseuon tra\'n anweithredol.</string>
@@ -401,6 +405,8 @@ Send neges heb ei ddiogelu?</string>
   <!--InviteActivity-->
   <string name="InviteActivity_share">Rhannu</string>
   <string name="InviteActivity_choose_contacts">Dewis cysylltiadau</string>
+  <string name="InviteActivity_share_with_contacts">Rhannu gyda chysylltiadau</string>
+  <string name="InviteActivity_choose_how_to_share">Dewis sut i rannu</string>
   <string name="InviteActivity_cancel">Diddymu</string>
   <string name="InviteActivity_sending">Anfon…</string>
   <string name="InviteActivity_heart_content_description">Calon</string>
@@ -437,15 +443,53 @@ Send neges heb ei ddiogelu?</string>
   <string name="MmsDownloader_error_reading_mms_settings">Gwall wrth ddarllen gosodiadau darparwr MMS diwifr</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Cyfryngau</string>
+  <string name="MediaOverviewActivity_Files">Ffeiliau</string>
   <string name="MediaOverviewActivity_Audio">Sain</string>
+  <string name="MediaOverviewActivity_All">Y Cyfan</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">Dileu eitemau penodol</item>
+    <item quantity="two">Dileu eitemau penodol</item>
+    <item quantity="many">Dileu eitemau penodol</item>
+    <item quantity="other">Dileu eitemau penodol</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">Bydd hyn yn dileu\'n barhaol y ffeil hon. Bydd unrhyw neges testun sy\'n gysylltiedig a\'r eitem yma\'n cael ei dileu.</item>
+    <item quantity="two">Bydd hyn yn dileu\'n barhaol pob un o\'r %1$d ffeil dewiswyd. Bydd unrhyw neges testun sy\'n gysylltiedig a\'r eitemau hyn yn cael eu dileu.</item>
+    <item quantity="many">Bydd hyn yn dileu\'n barhaol pob un o\'r %1$d ffeil dewiswyd. Bydd unrhyw neges testun sy\'n gysylltiedig a\'r eitemau hyn yn cael eu dileu.</item>
+    <item quantity="other">Bydd hyn yn dileu\'n barhaol pob un o\'r %1$d ffeil dewiswyd. Bydd unrhyw neges testun sy\'n gysylltiedig a\'r eitemau hyn yn cael eu dileu.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Wrthi\'n dileu</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dileu negeseuon…</string>
   <string name="MediaOverviewActivity_Select_all">Dewis popeth</string>
   <string name="MediaOverviewActivity_collecting_attachments">Casglu atodiadau…</string>
+  <string name="MediaOverviewActivity_Sort_by">Trefnu yn ôl</string>
+  <string name="MediaOverviewActivity_Newest">Diweddaraf</string>
+  <string name="MediaOverviewActivity_Oldest">Hynaf</string>
+  <string name="MediaOverviewActivity_Storage_used">Storfa wedi ei ddefnyddio</string>
+  <string name="MediaOverviewActivity_All_storage_use">Pob defnydd storfa</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Golwg grid</string>
+  <string name="MediaOverviewActivity_List_view_description">Golwg rhestr</string>
+  <string name="MediaOverviewActivity_Selected_description">Dewiswyd</string>
+  <plurals name="MediaOverviewActivity_d_items_s">
+    <item quantity="one">%1$d eitem %2$s</item>
+    <item quantity="two">%1$d eitem %2$s</item>
+    <item quantity="many">%1$d eitem %2$s</item>
+    <item quantity="other">%1$d eitem %2$s</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_d_items">
+    <item quantity="one">%1$d eitem</item>
+    <item quantity="two">%1$d eitem</item>
+    <item quantity="many">%1$d eitem</item>
+    <item quantity="other">%1$d eitem</item>
+  </plurals>
   <string name="MediaOverviewActivity_file">Ffeil</string>
   <string name="MediaOverviewActivity_audio">Sain</string>
   <string name="MediaOverviewActivity_video">Fideo</string>
   <string name="MediaOverviewActivity_image">Llun</string>
+  <string name="MediaOverviewActivity_sent_by_s">Anfonwyd gan %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Anfonwyd gennych chi</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">Anfonwyd gan %1$s i %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Anfonwyd gennych chi i %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Ar ganol galwad Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Sicrhau galwad Signal</string>
@@ -544,8 +588,16 @@ Send neges heb ei ddiogelu?</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Nid yw\'r fersiwn o Google Play Services rydych chi wedi\'i osod yn gweithredu\'n gywir. Ail-osodwch Google Play Services a cheisiwch eto.</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">Enw proffil</string>
+  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Gall eich cysylltiadau, defnyddwyr eraill a grwpiau weld eich enw proffil pan fyddwch yn cychwyn sgwrs neu dderbyn cais am sgwrs.</string>
   <string name="ProfileEditNameFragment_save">Cadw</string>
   <!--ProfileEditOverviewFragment-->
+  <string name="ProfileEditOverviewFragment_profile">Proffil</string>
+  <string name="ProfileEditOverviewFragment_profile_name">Enw proffilEnw proffil</string>
+  <string name="ProfileEditOverviewFragment_username">Enw defnyddiwr</string>
+  <string name="ProfileEditOverviewFragment_create_a_profile_name">Creu enw proffil</string>
+  <string name="ProfileEditOverviewFragment_create_a_username">Creu enw defnyddiwr</string>
+  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Gall eich cysylltiadau, defnyddwyr eraill a grwpiau weld eich Proffil Signal pan fyddwch yn cychwyn sgwrs neu dderbyn cais am sgwrs. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Tapiwch yma i ddysgu ragor</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Graddio\'r ap</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Os ydych chi\'n mwynhau defnyddio\'r ap hwn, cymerwch amser i\'n helpu ni drwy ei raddio.</string>
@@ -614,6 +666,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="RegistrationActivity_failed_to_verify_the_captcha">Methwyd dilysu\'r CAPTCHA</string>
   <string name="RegistrationActivity_next">Nesaf</string>
   <string name="RegistrationActivity_continue">Parhau</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">Parhau (%d ymgais ar ôl)</string>
+  <string name="RegistrationActivity_continue_last_attempt">Parhau (ymgais olaf)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">Cymrwch breifatrwydd gyda chi.\nByddwch chi eich hun ymhob neges.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Rhowch eich rhif ffôn i gychwyn arni</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Byddwch yn derbyn cod dilysu. Gall cyfraddau darparwr gael eu codi. </string>
@@ -712,8 +766,19 @@ Send neges heb ei ddiogelu?</string>
   <string name="UnverifiedSendDialog_send_message">Anfon neges?</string>
   <string name="UnverifiedSendDialog_send">Anfon</string>
   <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Enw defnyddiwr</string>
   <string name="UsernameEditFragment_submit">Cyflwyno</string>
   <string name="UsernameEditFragment_delete">Dileu</string>
+  <string name="UsernameEditFragment_successfully_set_username">Wedi gosod enw defnyddiwr yn llwyddiannus.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">Wedi tynnu enw defnyddiwr yn llwyddiannus.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">Profwyd gwall rhwydwaith.</string>
+  <string name="UsernameEditFragment_this_username_is_taken">Mae\'r enw defnyddiwr yma\'n wedi ei gymryd</string>
+  <string name="UsernameEditFragment_this_username_is_available">Mae\'r enw defnyddiwr yma ar gael</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Gall enwau defnyddwyr ddim ond cynnwys a-Z, 0-9, a thanlinellau</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Nid yw enw defnyddiwr yn gallu cychwyn gyda rhif</string>
+  <string name="UsernameEditFragment_username_is_invalid">Mae\'r enw defnyddiwr yn annilys.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Rhaid i enwau defnyddwyr fod rhwng %1$d a %2$d nod.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">Gall defnyddwyr eraill Signal anfon cais am neges i\'ch enw defnyddiwr unigryw heb wybod beth yw eich rhif ffôn. Mae dewis enw defnyddiwr yn ddewisol.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Mae eich cyswllt yn rhedeg hen fersiwn o Signal. Gofynnwch iddynt ddiweddaru cyn gwirio eich rhif diogelwch.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Mae eich cyswllt yn rhedeg fersiwn newydd o Signal gyda fformat cod QR anghydnaws. Diweddarwch i gymharu.</string>
@@ -753,6 +818,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Methu cadw i storfa allanol heb ganiatâd</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Dileu neges?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Bydd hyn yn dileu yn barhaol y neges hon.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s i %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d neges newydd mewn %2$d sgwrs</string>
   <string name="MessageNotifier_most_recent_from_s">Y diweddaraf gan: %1$s</string>
@@ -774,6 +840,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Agorwch Signal i weld hysbysiadau diweddar.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Cysylltiad</string>
+  <string name="MessageNotifier_reacted_to_your_message">Ateb eich neges: %1$s</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Rhagosodiad</string>
   <string name="NotificationChannel_calls">Galwadau</string>
@@ -785,6 +852,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="NotificationChannel_group_messages">Negeseuon</string>
   <string name="NotificationChannel_missing_display_name">Anhysbys</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">Gosodwyd enw proffil yn llwyddiannus.</string>
+  <string name="ProfileEditNameFragment_encountered_a_network_error">Profwyd gwall rhwydwaith.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Nid yw ymateb cyflym ar gael pan fydd Signal wedi\'i gloi!</string>
   <string name="QuickResponseService_problem_sending_message">Anhawster anfon neges!</string>
@@ -800,6 +869,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Neges newydd</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">Chwarae fideo</string>
+  <string name="ThumbnailView_Has_a_caption_description">Mae ganddo bennawd</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Eitem</item>
@@ -867,6 +938,8 @@ Send neges heb ei ddiogelu?</string>
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Mae ar Signal angen caniatâd Cysylltiadau er mwyn dangos eich cysylltiadau, ond fe\'i rwystrwyd yn barhaol. Ewch i ddewislen gosodiadau\'r ap, dewis "Caniatâd", a galluogi "Cysylltiadau".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Gwall wrth estyn cysylltiadau, gwiriwch eich cysylltiad rhwydwaith</string>
+  <string name="ContactSelectionListFragment_username_not_found">Heb ganfod enw defnyddiwr</string>
+  <string name="ContactSelectionListFragment_s_is_not_a_signal_user">Nid yw \"%1$s\" yn ddefnyddiwr Signal. Gwiriwch yn enw defnyddiwr a cheisiwch eto.</string>
   <string name="ContactSelectionListFragment_okay">Iawn</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Dim cysylltiadau wedi\'u rhwystro</string>
@@ -1199,6 +1272,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Dileu negeseuon hŷn yn ddiofyn pan fydd y sgwrs yn fwy na maint penodol</string>
   <string name="preferences__delete_old_messages">Dileu hen negeseuon</string>
   <string name="preferences__chats">Sgyrsiau a chyfryngau</string>
+  <string name="preferences__storage">Storfa</string>
   <string name="preferences__conversation_length_limit">Maint uchaf sgyrsiau</string>
   <string name="preferences__trim_all_conversations_now">Tocio bob sgwrs nawr</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Sganio drwy\'r holl sgyrsiau a gorfodi terfynau hyd sgwrsio</string>
@@ -1227,7 +1301,12 @@ Send neges heb ei ddiogelu?</string>
   <string name="preferences_chats__when_roaming">Wrth grwydro</string>
   <string name="preferences_chats__media_auto_download">Awto lwytho cyfryngau</string>
   <string name="preferences_chats__message_trimming">Tocio sgyrsiau</string>
+  <string name="preferences_storage__storage_usage">Storfa wedi ei ddefnyddio</string>
+  <string name="preferences_storage__photos">Lluniau</string>
+  <string name="preferences_storage__videos">Fideos</string>
+  <string name="preferences_storage__files">Ffeiliau</string>
   <string name="preferences_storage__audio">Sain</string>
+  <string name="preferences_storage__review_storage">Adolygu\'r storfa</string>
   <string name="preferences_advanced__use_system_emoji">Defnyddio gwenogluniau\'r system</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Analluogi cefnogaeth gwenogluniau Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Ail-alw pob galwad drwy\'r gweinydd Signal i osgoi datgelu eich cyfeiriad IP i\'ch cyswllt. Bydd galluogi yn lleihau ansawdd galwadau.</string>
@@ -1261,6 +1340,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="conversation_callable_insecure__menu_call">Galw</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Galwad Signal</string>
+  <string name="conversation_callable_secure__menu_video">Galwad fideo Signal</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">Manylion y neges</string>
   <string name="conversation_context__menu_copy_text">Copïo testun</string>
@@ -1269,6 +1349,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="conversation_context__menu_resend_message">Ailanfon y neges</string>
   <string name="conversation_context__menu_reply_to_message">Ateb neges</string>
   <!--conversation_context_reacction-->
+  <string name="conversation_context__reaction_multi_select">Dewis nifer</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Cadw atodiad</string>
   <!--conversation_expiring_off-->
@@ -1475,6 +1556,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Gwall wrth gysylltu â\'r gwasanaeth</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Analluogi PIN Cofrestru Clo?</string>
   <string name="RegistrationLockDialog_disable">Analluogi</string>
+  <string name="RegistrationActivity_pin_incorrect">PIN anghywir</string>
+  <string name="RegistrationActivity_you_have_d_tries_remaining">Mae genych %d cais ar ôl</string>
   <string name="preferences_chats__backups">Copïau wrth gefn</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Mae Signal wedi\'i gloi</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TAPIO I DDATGLOI</string>
@@ -1484,5 +1567,16 @@ Send neges heb ei ddiogelu?</string>
   <string name="MessageRequestBottomView_accept">Derbyn</string>
   <string name="MessageRequestBottomView_delete">Dileu</string>
   <string name="MessageRequestBottomView_block">Rhwystro</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let">Hoffech chi dderbyn negeseuon gan %1$s?</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Aelod o %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Aeolod o %1$s a %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Aelod o %1$s, %2$s a %3$s</string>
+  <string name="MessageRequestProfileView_members">%1$d aelod</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d arall</item>
+    <item quantity="two">%d RLL</item>
+    <item quantity="many">%d arall</item>
+    <item quantity="other">%d arall</item>
+  </plurals>
   <!--EOF-->
 </resources>
