--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -73,6 +73,7 @@
   <string name="BucketedThreadMedia_This_week">Denne uge</string>
   <string name="BucketedThreadMedia_This_month">Denne måned</string>
   <string name="BucketedThreadMedia_Large">Stor</string>
+  <string name="BucketedThreadMedia_Medium">Medium</string>
   <string name="BucketedThreadMedia_Small">Lille</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Indgående opkald</string>
@@ -100,6 +101,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Ingen Webbrowser fundet</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Et netværksopkald er allerede igang</string>
+  <string name="CommunicationActions_start_video_call">Foretag  video opkald?</string>
+  <string name="CommunicationActions_start_voice_call">Foretag opkald?</string>
   <string name="CommunicationActions_cancel">Annuller</string>
   <string name="CommunicationActions_call">Ring op</string>
   <!--ConfirmIdentityDialog-->
@@ -111,6 +114,8 @@
   <string name="ContactsCursorLoader_recent_chats">Seneste beskeder</string>
   <string name="ContactsCursorLoader_contacts">Kontakter</string>
   <string name="ContactsCursorLoader_groups">Grupper</string>
+  <string name="ContactsCursorLoader_phone_number_search">Søg telefonnummer</string>
+  <string name="ContactsCursorLoader_username_search">Søg brugernavn</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Besked %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal opkald %s</string>
@@ -301,6 +306,7 @@
   <string name="DeviceListItem_last_active_s">Sidste aktive %s</string>
   <string name="DeviceListItem_today">I dag</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">Unavngivet fil</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimér for manglende Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Enheden understøtter ikke Play Services. Tap for at slå batterioptimering fra, som forhindrer Signal i at modtage beskeder i baggrunden</string>
@@ -370,6 +376,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Del</string>
   <string name="InviteActivity_choose_contacts">Vælg kontakter</string>
+  <string name="InviteActivity_share_with_contacts">Del med kontakter</string>
+  <string name="InviteActivity_choose_how_to_share">Vælg delingsmåde</string>
   <string name="InviteActivity_cancel">Afbryd</string>
   <string name="InviteActivity_sending">Sender…</string>
   <string name="InviteActivity_heart_content_description">Hjerte</string>
@@ -402,15 +410,27 @@
   <string name="MmsDownloader_error_reading_mms_settings">Kunne ikke læse indstillinger for trådløs MMS udbyder</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Medie</string>
+  <string name="MediaOverviewActivity_Files">Filer</string>
   <string name="MediaOverviewActivity_Audio">Lyd</string>
+  <string name="MediaOverviewActivity_All">Alle</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Sletter</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Sletter beskeder…</string>
   <string name="MediaOverviewActivity_Select_all">Vælg alle</string>
   <string name="MediaOverviewActivity_collecting_attachments">Samler vedhæftninger…</string>
+  <string name="MediaOverviewActivity_Sort_by">Sortér efter</string>
+  <string name="MediaOverviewActivity_Newest">Nyeste</string>
+  <string name="MediaOverviewActivity_Oldest">Ældste</string>
+  <string name="MediaOverviewActivity_Storage_used">Lager brugt</string>
+  <string name="MediaOverviewActivity_All_storage_use">Lager brugt samlet</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Gittervisning</string>
+  <string name="MediaOverviewActivity_List_view_description">Listevisning</string>
+  <string name="MediaOverviewActivity_Selected_description">Valgte</string>
   <string name="MediaOverviewActivity_file">Fil</string>
   <string name="MediaOverviewActivity_audio">Lyd</string>
   <string name="MediaOverviewActivity_video">Video</string>
   <string name="MediaOverviewActivity_image">Billede</string>
+  <string name="MediaOverviewActivity_sent_by_s">Sendt af %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Sendt af dig</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal opkald i gang</string>
   <string name="NotificationBarManager__establishing_signal_call">Foretager Signalopkald</string>
@@ -508,9 +528,12 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Din installerede version af Google Play tjenester virker ikke korrekt. Geninstallér venligst Google Play tjenester og prøv igen</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">Profilnavn</string>
   <string name="ProfileEditNameFragment_save">Gem</string>
   <!--ProfileEditOverviewFragment-->
   <string name="ProfileEditOverviewFragment_profile">Profil</string>
+  <string name="ProfileEditOverviewFragment_profile_name">Profilnavn</string>
+  <string name="ProfileEditOverviewFragment_username">Brugernavn</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Bedøm app\'en</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hvis du kan lide at bruge app\'en, så hjælp os venligst ved at bedømme den</string>
@@ -679,6 +702,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="UnverifiedSendDialog_send_message">Send besked?</string>
   <string name="UnverifiedSendDialog_send">Send</string>
   <!--UsernameEditFragment-->
+  <string name="UsernameEditFragment_username">Brugernavn</string>
   <string name="UsernameEditFragment_submit">Send</string>
   <string name="UsernameEditFragment_delete">Slet</string>
   <!--VerifyIdentityActivity-->
@@ -1176,6 +1200,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="preferences_chats__when_roaming">Ved roaming</string>
   <string name="preferences_chats__media_auto_download">Hent automatisk multimedier</string>
   <string name="preferences_chats__message_trimming">Trimning af beskeder</string>
+  <string name="preferences_storage__files">Filer</string>
   <string name="preferences_storage__audio">Lyd</string>
   <string name="preferences_advanced__use_system_emoji">Anvend system emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Deaktivér Signals indbyggede emoji understøttelse</string>
