--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -73,6 +73,7 @@
   <string name="BucketedThreadMedia_This_week">tällä viikolla</string>
   <string name="BucketedThreadMedia_This_month">tässä kuussa</string>
   <string name="BucketedThreadMedia_Large">Suuri</string>
+  <string name="BucketedThreadMedia_Medium">Keskikokoinen</string>
   <string name="BucketedThreadMedia_Small">Pieni</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Saapuva puhelu</string>
@@ -100,6 +101,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Verkkoselainta ei löytynyt.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Matkapuhelu on jo käynnissä.</string>
+  <string name="CommunicationActions_start_video_call">Aloita videopuhelu?</string>
+  <string name="CommunicationActions_start_voice_call">Aloita äänipuhelu?</string>
   <string name="CommunicationActions_cancel">Peruuta</string>
   <string name="CommunicationActions_call">Soita</string>
   <!--ConfirmIdentityDialog-->
@@ -302,6 +305,7 @@
   <string name="DeviceListItem_last_active_s">Viimeksi käytetty %s</string>
   <string name="DeviceListItem_today">tänään</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">Nimeämätön tiedosto</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimoi Play Servicesin puuttumista</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Tämä laite ei tue Play Servicesiä. Napauta tästä ottaaksesi pois päältä virransäästöominaisuudet, jotka estävät Signalia hakemasta viestejä taustalla.</string>
@@ -371,6 +375,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Jaa</string>
   <string name="InviteActivity_choose_contacts">Valitse yhteystietoja</string>
+  <string name="InviteActivity_share_with_contacts">Jaa yhteystietojen kanssa</string>
+  <string name="InviteActivity_choose_how_to_share">Valitse miten jaat</string>
   <string name="InviteActivity_cancel">Peruuta</string>
   <string name="InviteActivity_sending">Lähetetään…</string>
   <string name="InviteActivity_heart_content_description">Sydän</string>
@@ -403,15 +409,45 @@
   <string name="MmsDownloader_error_reading_mms_settings">Virhe luettaessa operaattorin MMS-asetuksia</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
+  <string name="MediaOverviewActivity_Files">Tiedostot</string>
   <string name="MediaOverviewActivity_Audio">Äänitiedosto</string>
+  <string name="MediaOverviewActivity_All">Kaikki</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">Poistetaanko valittu?</item>
+    <item quantity="other">Poistetaanko valitut?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">Tämä poistaa valitun tiedoston pysyvästi. Myös kaikki tähän kohtaan liittyvä viestiteksti poistetaan.</item>
+    <item quantity="other">Tämä poistaa kaikki %1$d valittua tiedostoa pysyvästi. Myös kaikki näihin kohteisiin liittyvä viestiteksti poistetaan.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Poistetaan</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Viestejä poistetaan…</string>
   <string name="MediaOverviewActivity_Select_all">Valitse kaikki</string>
   <string name="MediaOverviewActivity_collecting_attachments">Kerätään liitetiedostoja…</string>
+  <string name="MediaOverviewActivity_Sort_by">Järjestä</string>
+  <string name="MediaOverviewActivity_Newest">Uusin</string>
+  <string name="MediaOverviewActivity_Oldest">Vanhin</string>
+  <string name="MediaOverviewActivity_Storage_used">Käytetty tallennustila</string>
+  <string name="MediaOverviewActivity_All_storage_use">Kaikki tallennukset</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Ruudukkonäkymä</string>
+  <string name="MediaOverviewActivity_List_view_description">Listanäkymä</string>
+  <string name="MediaOverviewActivity_Selected_description">Valittu</string>
+  <plurals name="MediaOverviewActivity_d_items_s">
+    <item quantity="one">%1$d kappale %2$s</item>
+    <item quantity="other">%1$d kappaletta %2$s</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_d_items">
+    <item quantity="one">%1$d kappale</item>
+    <item quantity="other">%1$d kappaletta</item>
+  </plurals>
   <string name="MediaOverviewActivity_file">Tiedosto</string>
   <string name="MediaOverviewActivity_audio">Äänitiedosto</string>
   <string name="MediaOverviewActivity_video">Video</string>
   <string name="MediaOverviewActivity_image">Kuva</string>
+  <string name="MediaOverviewActivity_sent_by_s">%1$s lähettämä</string>
+  <string name="MediaOverviewActivity_sent_by_you">Sinun lähettämä</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">%1$s lähettämä henkilölle %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Sinun lähettämä henkilölle %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-puhelu käynnissä</string>
   <string name="NotificationBarManager__establishing_signal_call">Muodostetaan Signal-puhelua</string>
@@ -508,10 +544,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Käyttämäsi versio Google Play Servicestä ei toimi kunnolla. Asenna Google Play Services uudelleen ja yritä uudestaan.</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">Profiilin nimi</string>
+  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">Yhteyshenkilöt ja muut käyttäjät tai ryhmät voivat nähdä profiilinimesi, kun aloitat keskustelun tai hyväksyt keskustelupyynnön.</string>
   <string name="ProfileEditNameFragment_save">Tallenna</string>
   <!--ProfileEditOverviewFragment-->
   <string name="ProfileEditOverviewFragment_profile">Profiili</string>
+  <string name="ProfileEditOverviewFragment_profile_name">Profiilin nimi</string>
   <string name="ProfileEditOverviewFragment_username">Käyttäjätunnus</string>
+  <string name="ProfileEditOverviewFragment_create_a_profile_name">Luo profiilin nimi</string>
+  <string name="ProfileEditOverviewFragment_create_a_username">Luo käyttäjätunnus</string>
+  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">Yhteyshenkilöt ja muut käyttäjät tai ryhmät voivat nähdä Signal-profiilisi, kun aloitat keskustelun tai hyväksyt keskustelupyynnön. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Napauta tätä lukeaksesi lisää</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Arvostele tämä sovellus</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jos pidät Signalista, voit auttaa meitä arvostelemalla sen.</string>
@@ -578,6 +620,8 @@ puhelinnumero</string>
   <string name="RegistrationActivity_failed_to_verify_the_captcha">CAPTCHA:n vahvistaminen epäonnistui</string>
   <string name="RegistrationActivity_next">Seuraava</string>
   <string name="RegistrationActivity_continue">Jatka</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">Jatka (%d yritystä jäljellä)</string>
+  <string name="RegistrationActivity_continue_last_attempt">Jatka (viimeinen yritys!)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">Ota yksityisyys mukaasi.\nOle itsesi jokaisessa viestissä.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Syötä puhelinnumerosi, jotta pääset alkuun</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Saat vahvistuskoodin. Matkapuhelinoperaattorisi hinnat voivat olla voimassa.</string>
@@ -679,6 +723,16 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="UsernameEditFragment_username">Käyttäjätunnus</string>
   <string name="UsernameEditFragment_submit">Lähetä</string>
   <string name="UsernameEditFragment_delete">Poista</string>
+  <string name="UsernameEditFragment_successfully_set_username">Käyttäjätunnuksen asetus onnistui.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">Käyttäjätunnuksen poisto onnistui.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">Verkkovirhe.</string>
+  <string name="UsernameEditFragment_this_username_is_taken">Tämä käyttäjätunnus on varattu.</string>
+  <string name="UsernameEditFragment_this_username_is_available">Tämä käyttäjätunnus on vapaa.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Käyttäjätunnukset voivat sisältää vain a-Z, 0-9 ja aliviivat.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Käyttäjätunnukset eivät voi alkaa numerolla.</string>
+  <string name="UsernameEditFragment_username_is_invalid">Käyttäjätunnus on virheellinen.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Käyttäjätunnusten on oltava %1$d–%2$d merkkiä.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">Muut Signalin käyttäjät voivat lähettää viestipyyntöjä yksilölliselle käyttäjätunnuksellesi tietämättään puhelinnumeroasi. Käyttäjätunnuksen valitseminen on vapaaehtoista.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Yhteystietosi käyttää vanhaa versiota Signalista. Pyydä häntä päivittämään, jotta voit varmentaa turvanumeron.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Yhteystietosi käyttää uudempaa versiota Signalista, jonka QR-koodi ei toimi oman versiosi kanssa. Päivitä Signalisi uusimpaan versioon.</string>
@@ -718,6 +772,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Tallennus ulkoiseen tallennustilaan ei onnistu ilman käyttöoikeutta.</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Poistetaanko viesti?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Tämä poistaa pysyvästi tämän viestin.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s henkilölle %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d uutta viestiä %2$d keskustelussa</string>
   <string name="MessageNotifier_most_recent_from_s">Uusin lähettäjältä: %1$s</string>
@@ -739,6 +794,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Avaa Signal tarkistaaksesi viimeisimmät ilmoitukset.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Yhteystieto</string>
+  <string name="MessageNotifier_reacted_to_your_message">Reagoi viestiisi: %1$s</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Oletus</string>
   <string name="NotificationChannel_calls">Puhelut</string>
@@ -750,6 +806,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="NotificationChannel_group_messages">Viestit</string>
   <string name="NotificationChannel_missing_display_name">Tuntematon</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">Profiilin nimen asetus onnistui.</string>
+  <string name="ProfileEditNameFragment_encountered_a_network_error">Verkkovirhe.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Pikavastaus ei toimi, kun Signal on lukittu!</string>
   <string name="QuickResponseService_problem_sending_message">Ongelma viestin lähettämisessä!</string>
@@ -765,6 +823,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Uusi viesti</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">Toista video</string>
+  <string name="ThumbnailView_Has_a_caption_description">Sisältää kuvatekstin</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d kappale</item>
@@ -830,6 +890,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">Signal tarvitsee lupaa käyttää laitteesi yhteystietoja voidakseen näyttää yhteystietosi, mutta tämä käyttöoikeus on pysyvästi evätty Signalilta. Voit muuttaa tätä menemällä sovellusten asetuksiin, valitsemalla \"Sovelluksen käyttöoikeudet\" ja laittamalla päälle \"Yhteystiedot\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Yhteystietojen haussa tapahtui virhe. Tarkista verkkoyhteytesi.</string>
+  <string name="ContactSelectionListFragment_username_not_found">Käyttäjätunnusta ei löydy</string>
+  <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" ei ole Signalin käyttäjä. Tarkista käyttäjätunnus ja yritä uudelleen.</string>
   <string name="ContactSelectionListFragment_okay">Selvä</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Ei estettyjä yhteystietoja</string>
@@ -1175,7 +1237,12 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="preferences_chats__when_roaming">Roaming-tilassa</string>
   <string name="preferences_chats__media_auto_download">Liitetiedostojen automaattinen lataus</string>
   <string name="preferences_chats__message_trimming">Keskustelujen karsiminen</string>
+  <string name="preferences_storage__storage_usage">Tallennustilan käyttö</string>
+  <string name="preferences_storage__photos">Kuvat</string>
+  <string name="preferences_storage__videos">Videot</string>
+  <string name="preferences_storage__files">Tiedostot</string>
   <string name="preferences_storage__audio">Äänitiedosto</string>
+  <string name="preferences_storage__review_storage">Tarkista tallennustila</string>
   <string name="preferences_advanced__use_system_emoji">Käytä järjestelmän hymiöitä</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Ota Signalin oletushymiöt pois käytöstä</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Välitä kaikki puhelut Signal-palvelimen kautta välttääksesi IP-osoitteesi paljastumista yhteystiedollesi. Tämä toiminto heikentää puhelun laatua.</string>
@@ -1209,6 +1276,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="conversation_callable_insecure__menu_call">Soita</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Signal-puhelu</string>
+  <string name="conversation_callable_secure__menu_video">Signal-videopuhelu</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">Viestin tiedot</string>
   <string name="conversation_context__menu_copy_text">Kopioi teksti</string>
@@ -1217,6 +1285,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="conversation_context__menu_resend_message">Lähetä viesti uudelleen</string>
   <string name="conversation_context__menu_reply_to_message">Vastaa viestiin</string>
   <!--conversation_context_reacction-->
+  <string name="conversation_context__reaction_multi_select">Valitse useita</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Tallenna liite</string>
   <!--conversation_expiring_off-->
@@ -1421,6 +1490,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Virhe yhdistettäessä palveluun</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Otetaanko rekisteröinnin lukituksen PIN-koodi pois käytöstä?</string>
   <string name="RegistrationLockDialog_disable">Poista käytöstä</string>
+  <string name="RegistrationActivity_pin_incorrect">Väärä PIN</string>
+  <string name="RegistrationActivity_you_have_d_tries_remaining">Sinulla on %d yritystä jäljellä</string>
   <string name="preferences_chats__backups">Varmuuskopiot</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal on lukittu</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">AVAA NAPAUTTAMALLA</string>
@@ -1430,5 +1501,14 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="MessageRequestBottomView_accept">Hyväksy</string>
   <string name="MessageRequestBottomView_delete">Poista</string>
   <string name="MessageRequestBottomView_block">Estä</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let">Haluatko vastaanottaa viestejä yhteystiedolta %1$s?</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Jäsen ryhmässä %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Jäsen ryhmissä %1$s ja %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Jäsen ryhmissä %1$s, %2$s ja %3$s</string>
+  <string name="MessageRequestProfileView_members">%1$d jäsentä</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d muuta</item>
+    <item quantity="other">%d muuta</item>
+  </plurals>
   <!--EOF-->
 </resources>
