--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -73,6 +73,7 @@
   <string name="BucketedThreadMedia_This_week">Esta semana</string>
   <string name="BucketedThreadMedia_This_month">Este mês</string>
   <string name="BucketedThreadMedia_Large">Grande</string>
+  <string name="BucketedThreadMedia_Medium">Média</string>
   <string name="BucketedThreadMedia_Small">Pequena</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">A receber chamada</string>
@@ -100,6 +101,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Não foi encontrado nenhum navegador de Internet.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Já está a decorrer uma chamada através das redes móveis.</string>
+  <string name="CommunicationActions_start_video_call">Iniciar videochamada?</string>
+  <string name="CommunicationActions_start_voice_call">Iniciar chamada de voz?</string>
   <string name="CommunicationActions_cancel">Cancelar</string>
   <string name="CommunicationActions_call">Telefonar</string>
   <!--ConfirmIdentityDialog-->
@@ -302,6 +305,7 @@
   <string name="DeviceListItem_last_active_s">Ativo pela última vez %s</string>
   <string name="DeviceListItem_today">Hoje</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">Ficheiro sem nome</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Otimizar para os \"Play Services\" em falta.</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Este dispositivo não suporta os Play Services. Toque para desativar o sistema de otimização de bateria que impede o Signal de recolher mensagens enquanto inativo.</string>
@@ -371,6 +375,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Partilhar</string>
   <string name="InviteActivity_choose_contacts">Escolher contactos</string>
+  <string name="InviteActivity_share_with_contacts">Partilhar com os contactos</string>
+  <string name="InviteActivity_choose_how_to_share">Escolha como partilhar</string>
   <string name="InviteActivity_cancel">Cancelar</string>
   <string name="InviteActivity_sending">A enviar…</string>
   <string name="InviteActivity_heart_content_description">Coração</string>
@@ -403,15 +409,45 @@
   <string name="MmsDownloader_error_reading_mms_settings">Erro ao ler as configurações do operador MMS</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimédia</string>
+  <string name="MediaOverviewActivity_Files">Ficheiros</string>
   <string name="MediaOverviewActivity_Audio">Áudio</string>
+  <string name="MediaOverviewActivity_All">Tudo</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">Eliminar o item selecionado?</item>
+    <item quantity="other">Eliminar os itens selecionados?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">Isto irá eliminar permanentemente o ficheiro selecionado. Qualquer mensagem de texto associada a este item também será eliminada.</item>
+    <item quantity="other">Isto irá eliminar permanentemente todos os %1$d ficheiros selecionados. Qualquer mensagem de texto associada a estes itens também serão eliminados.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">A eliminar</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">A eliminar mensagens…</string>
   <string name="MediaOverviewActivity_Select_all">Seleccionar tudo</string>
   <string name="MediaOverviewActivity_collecting_attachments">A recolher anexos…</string>
+  <string name="MediaOverviewActivity_Sort_by">Ordenar por</string>
+  <string name="MediaOverviewActivity_Newest">Mais recente</string>
+  <string name="MediaOverviewActivity_Oldest">Mais antiga</string>
+  <string name="MediaOverviewActivity_Storage_used">Armazenamento utilizado</string>
+  <string name="MediaOverviewActivity_All_storage_use">Todo o armazenamento utilizado</string>
+  <string name="MediaOverviewActivity_Grid_view_description">Vista em grelha</string>
+  <string name="MediaOverviewActivity_List_view_description">Vista em lista</string>
+  <string name="MediaOverviewActivity_Selected_description">Selecionado(s)</string>
+  <plurals name="MediaOverviewActivity_d_items_s">
+    <item quantity="one">%1$d item %2$s</item>
+    <item quantity="other">%1$d items %2$s</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_d_items">
+    <item quantity="one">%1$d item</item>
+    <item quantity="other">%1$d items</item>
+  </plurals>
   <string name="MediaOverviewActivity_file">Ficheiro</string>
   <string name="MediaOverviewActivity_audio">Áudio</string>
   <string name="MediaOverviewActivity_video">Vídeo</string>
   <string name="MediaOverviewActivity_image">Imagem</string>
+  <string name="MediaOverviewActivity_sent_by_s">Enviado por %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Enviado por si</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">Enviado por %1$s para %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Enviado para si por %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chamada do Signal em curso</string>
   <string name="NotificationBarManager__establishing_signal_call">A estabelecer chamada do Signal</string>
@@ -508,10 +544,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A versão do Google Play Services que tem instalada não está a funcionar corretamente. Por favor, reinstale o Google Play Services e tente novamente.</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">Nome de perfil</string>
+  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">O seu nome de perfil pode ser visto pelos seus contactos e por outros utilizadores ou grupos quando você inicia uma conversa ou aceita um pedido de conversação.</string>
   <string name="ProfileEditNameFragment_save">Guardar</string>
   <!--ProfileEditOverviewFragment-->
   <string name="ProfileEditOverviewFragment_profile">Perfil</string>
+  <string name="ProfileEditOverviewFragment_profile_name">Nome de perfil</string>
   <string name="ProfileEditOverviewFragment_username">Nome de utilizador</string>
+  <string name="ProfileEditOverviewFragment_create_a_profile_name">Criar um nome de perfil</string>
+  <string name="ProfileEditOverviewFragment_create_a_username">Criar um nome de utilizador</string>
+  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">O seu Perfil do Signal pode ser visto pelos seus contactos e por outros utilizadores ou grupos quando você inicia uma conversa ou aceita um pedido de conversa. <a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">Toque aqui para saber mais</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Avaliar esta aplicação</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se gostou desta aplicação, ajude-nos avaliando-a.</string>
@@ -578,6 +620,8 @@ especificou (%s) é inválido.</string>
   <string name="RegistrationActivity_failed_to_verify_the_captcha">Falha o verificar o CAPTCHA</string>
   <string name="RegistrationActivity_next">Seguinte</string>
   <string name="RegistrationActivity_continue">Continuar</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">Continuar (%d tentativas restantes)</string>
+  <string name="RegistrationActivity_continue_last_attempt">Continuar (última tentativa!)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">Leve a privacidade consigo.\Seja você mesmo em todas as mensagens.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Para começar introduza o seu número de telefone</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Irá receber um código de verificação. Poderão existir custos por parte da sua operadora.</string>
@@ -681,6 +725,16 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="UsernameEditFragment_username">Nome de utilizador</string>
   <string name="UsernameEditFragment_submit">Submeter</string>
   <string name="UsernameEditFragment_delete">Eliminar</string>
+  <string name="UsernameEditFragment_successfully_set_username">Nome de utilizador definido com sucesso.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">Nome de utilizador removido com sucesso.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">Encontrado um erro de rede</string>
+  <string name="UsernameEditFragment_this_username_is_taken">Este nome de utilizador já se encontra em utilização.</string>
+  <string name="UsernameEditFragment_this_username_is_available">Este nome de utilizador encontra-se disponível.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">Os nomes de utilizadores apenas podem incluir a-Z, 0-9 e underscores.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">Os nomes de utilizadores não podem começar com um número.</string>
+  <string name="UsernameEditFragment_username_is_invalid">Nome de utilizador inválido.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">Os nomes de utilizadores devem ter entre %1$d e %2$d caracteres.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">Outros utilizadores do Signal podem enviar pedidos de mensagens para o seu nome de utilizador único, mesmo sem conhecerem o seu número de telefone. Escolher um nome de utilizador é opcional.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">O seu contacto está a utilizar uma versão antiga do Signal. Por favor peça-lhe para actualizar antes de verificar o seu número de segurança.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">O seu contacto está a utilizar uma versão mais recente do Signal, com um formato de código QR incompatível. Por favor, actualize para comparar.</string>
@@ -720,6 +774,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">Não é possível guardar para o armazenamento externo sem permissões.</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Apagar mensagem?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Isto irá eliminar permanentemente esta mensagem.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$s para %2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d novas mensagens em %2$d conversas</string>
   <string name="MessageNotifier_most_recent_from_s">Mais recente de: %1$s</string>
@@ -741,6 +796,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">Abra o Signal para verificar se existem notificações recentes.</string>
   <string name="MessageNotifier_contact_message">%1$s%2$s</string>
   <string name="MessageNotifier_unknown_contact_message">Contacto</string>
+  <string name="MessageNotifier_reacted_to_your_message">Reagiu à sua mensagem: %1$s</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Predefinição</string>
   <string name="NotificationChannel_calls">Chamadas</string>
@@ -752,6 +808,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="NotificationChannel_group_messages">Mensagens</string>
   <string name="NotificationChannel_missing_display_name">Desconhecido</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">Nome de perfil definido com sucesso.</string>
+  <string name="ProfileEditNameFragment_encountered_a_network_error">Encontrado um erro de rede</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Resposta rápida encontra-se indisponível enquanto o Signal estiver bloqueado!</string>
   <string name="QuickResponseService_problem_sending_message">Problema no envio da mensagem!</string>
@@ -767,6 +825,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nova mensagem</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">Reproduzir vídeo</string>
+  <string name="ThumbnailView_Has_a_caption_description">Tem uma legenda</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d Item</item>
@@ -832,6 +892,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">O Signal requer permissão de acesso aos contactos para visualizar os seus contactos, mas esta foi negada permanentemente. Por favor, aceda às definições da aplicação, seleccione \"Permissões\" e ative \"Contactos\".</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">Problema a obter os contactos, verifique a sua ligação à rede</string>
+  <string name="ContactSelectionListFragment_username_not_found">Nome de utilizador não encontrado</string>
+  <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" não é um utilizador do Signal. Por favor, verifique o nome de utilizador e tente novamente.</string>
   <string name="ContactSelectionListFragment_okay">Ok</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Sem contactos bloqueados</string>
@@ -1177,7 +1239,12 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences_chats__when_roaming">Ao utilizar o roaming</string>
   <string name="preferences_chats__media_auto_download">Descarregar multimédia automaticamente</string>
   <string name="preferences_chats__message_trimming">Redução da mensagem</string>
+  <string name="preferences_storage__storage_usage">Utilização do armazenamento</string>
+  <string name="preferences_storage__photos">Fotografias</string>
+  <string name="preferences_storage__videos">Vídeos</string>
+  <string name="preferences_storage__files">Ficheiros</string>
   <string name="preferences_storage__audio">Áudio</string>
+  <string name="preferences_storage__review_storage">Rever armazenamento</string>
   <string name="preferences_advanced__use_system_emoji">Utilizar os emojis do sistema</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Desativar o suporte de emojis próprios do Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Passar todas as chamadas pelo servidor do Signal para evitar revelar o seu endereço IP ao destinatário. Ativar esta opção irá reduzir a qualidade da chamada.</string>
@@ -1211,6 +1278,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="conversation_callable_insecure__menu_call">Telefonar</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Chamada Signal</string>
+  <string name="conversation_callable_secure__menu_video">Videochamada do Signal</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">Detalhes da mensagem</string>
   <string name="conversation_context__menu_copy_text">Copiar texto</string>
@@ -1219,6 +1287,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="conversation_context__menu_resend_message">Reenviar mensagem</string>
   <string name="conversation_context__menu_reply_to_message">Responder à mensagem</string>
   <!--conversation_context_reacction-->
+  <string name="conversation_context__reaction_multi_select">Selecionar vários(as)</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Guardar anexo</string>
   <!--conversation_expiring_off-->
@@ -1423,6 +1492,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="RegistrationLockDialog_error_connecting_to_the_service">Erro ao estabelecer a ligação com o serviço</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Desativar o PIN de bloqueio do registo?</string>
   <string name="RegistrationLockDialog_disable">Desativar</string>
+  <string name="RegistrationActivity_pin_incorrect">PIN incorreto</string>
+  <string name="RegistrationActivity_you_have_d_tries_remaining">Restam-lhe %d tentativas</string>
   <string name="preferences_chats__backups">Cópias de segurança</string>
   <string name="prompt_passphrase_activity__signal_is_locked">O Signal está bloqueado</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TOQUE PARA DESBLOQUEAR</string>
@@ -1432,5 +1503,14 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="MessageRequestBottomView_accept">Aceitar</string>
   <string name="MessageRequestBottomView_delete">Eliminar</string>
   <string name="MessageRequestBottomView_block">Bloquear</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let">Deseja receber mensagens de %1$s?</string>
+  <string name="MessageRequestProfileView_member_of_one_group">Membro de %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">Membro de %1$s e %2$s</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">Membro de %1$s, %2$s e %3$s</string>
+  <string name="MessageRequestProfileView_members">%1$d membros</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%d outro</item>
+    <item quantity="other">%d outros</item>
+  </plurals>
   <!--EOF-->
 </resources>
