--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -79,7 +79,7 @@
   <string name="BucketedThreadMedia_This_week">Ta teden</string>
   <string name="BucketedThreadMedia_This_month">Ta mesec</string>
   <string name="BucketedThreadMedia_Large">Velike</string>
-  <string name="BucketedThreadMedia_Medium">Srednji</string>
+  <string name="BucketedThreadMedia_Medium">Srednje</string>
   <string name="BucketedThreadMedia_Small">Majhne</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Dohodni klic</string>
@@ -460,9 +460,9 @@
   <string name="MediaOverviewActivity_Media_delete_progress_message">Izbris sporočil …</string>
   <string name="MediaOverviewActivity_Select_all">Označi vse</string>
   <string name="MediaOverviewActivity_collecting_attachments">Nabiranje prilog …</string>
-  <string name="MediaOverviewActivity_Sort_by">Razvrščanje po</string>
-  <string name="MediaOverviewActivity_Newest">Najnovejših</string>
-  <string name="MediaOverviewActivity_Oldest">Najstarejših</string>
+  <string name="MediaOverviewActivity_Sort_by">Razvrščanje</string>
+  <string name="MediaOverviewActivity_Newest">Najnovejše</string>
+  <string name="MediaOverviewActivity_Oldest">Najstarejše</string>
   <string name="MediaOverviewActivity_Storage_used">Porabljen pomnilnik</string>
   <string name="MediaOverviewActivity_All_storage_use">Ves porabljen pomnilnik</string>
   <string name="MediaOverviewActivity_Grid_view_description">Mrežni pogled</string>
@@ -1267,7 +1267,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Samodejen izbris starih sporočil, ko pogovor preseže določeno dolžino</string>
   <string name="preferences__delete_old_messages">Samodejen izbris</string>
   <string name="preferences__chats">Pogovori in večpredstavnost</string>
-  <string name="preferences__storage">Shranjevanje</string>
+  <string name="preferences__storage">Pomnilnik</string>
   <string name="preferences__conversation_length_limit">Omejitev dolžine pogovorov</string>
   <string name="preferences__trim_all_conversations_now">Obreži vse pogovore zdaj</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Uveljavitev omejitve dolžine vseh pogovorov</string>
@@ -1298,7 +1298,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences_chats__message_trimming">Izbris starih sporočil</string>
   <string name="preferences_storage__storage_usage">Poraba pomnilnika</string>
   <string name="preferences_storage__photos">Fotografije</string>
-  <string name="preferences_storage__videos">Videi</string>
+  <string name="preferences_storage__videos">Video</string>
   <string name="preferences_storage__files">Datoteke</string>
   <string name="preferences_storage__audio">Zvok</string>
   <string name="preferences_storage__review_storage">Pregled porabe pomnilnika</string>
