--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -73,6 +73,7 @@
   <string name="BucketedThreadMedia_This_week">ఈ వారం</string>
   <string name="BucketedThreadMedia_This_month">ఈ నెల</string>
   <string name="BucketedThreadMedia_Large">పెద్ద</string>
+  <string name="BucketedThreadMedia_Medium">మీడియం</string>
   <string name="BucketedThreadMedia_Small">చిన్న</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">క్రొత్తగా వచ్చిన కాల్</string>
@@ -100,6 +101,8 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">వెబ్ బ్రౌజర్ కనుగొనబడలేదు.</string>
   <string name="CommunicationActions_a_cellular_call_is_already_in_progress">సెల్యులార్ కాల్ ఇప్పటికే పురోగతిలో ఉంది.</string>
+  <string name="CommunicationActions_start_video_call">వీడియో కాల్ ప్రారంభించాలా?</string>
+  <string name="CommunicationActions_start_voice_call">వాయిస్ కాల్ ప్రారంభించాలా?</string>
   <string name="CommunicationActions_cancel">రద్దు</string>
   <string name="CommunicationActions_call">కాల్</string>
   <!--ConfirmIdentityDialog-->
@@ -306,6 +309,7 @@
   <string name="DeviceListItem_last_active_s">చివరి క్రియాశీల %s</string>
   <string name="DeviceListItem_today">నేడు</string>
   <!--DocumentView-->
+  <string name="DocumentView_unnamed_file">పేరులేని పంక్తి</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">తప్పిపోయిన ప్లే సర్వీసులు కోసం ఆప్టిమైజ్</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">ఈ వస్తువు ఆట సేవలను సహకరించదు.
@@ -377,6 +381,8 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">పంచుకోండి</string>
   <string name="InviteActivity_choose_contacts">పరిచయాలను ఎంచుకోండి</string>
+  <string name="InviteActivity_share_with_contacts">పరిచయాలతో భాగస్వామ్యం చేయండి</string>
+  <string name="InviteActivity_choose_how_to_share">ఎలా భాగస్వామ్యం చేయాలో ఎంచుకోండి</string>
   <string name="InviteActivity_cancel">రద్దు</string>
   <string name="InviteActivity_sending">పంపుతోంది …</string>
   <string name="InviteActivity_heart_content_description">హృదయం</string>
@@ -409,15 +415,45 @@
   <string name="MmsDownloader_error_reading_mms_settings">వైర్లెస్ ప్రొవైడర్ ఎంఎంఎస్ సెట్టింగులను చదువుటలో దోషం</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">మీడియా</string>
+  <string name="MediaOverviewActivity_Files">ఫైళ్లు</string>
   <string name="MediaOverviewActivity_Audio">ఆడియో</string>
+  <string name="MediaOverviewActivity_All">అన్ని</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">ఎంచుకున్న అంశాన్ని తొలగించాలా?</item>
+    <item quantity="other">ఎంచుకున్న అంశాలను తొలగించాలా?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">ఇది ఎంచుకున్న ఫైల్‌ను శాశ్వతంగా తొలగిస్తుంది. ఈ అంశంతో అనుబంధించబడిన ఏదైనా సందేశ వచనం కూడా తొలగించబడుతుంది.</item>
+    <item quantity="other">ఇది ఎంచుకున్న%1$dఫైళ్ళను శాశ్వతంగా తొలగిస్తుంది. ఈ అంశాలతో అనుబంధించబడిన ఏదైనా సందేశ వచనం కూడా తొలగించబడుతుంది.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">తొలగిపోతున్నాయ్</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">సందేశాలను తొలగిస్తోంది …</string>
   <string name="MediaOverviewActivity_Select_all">అన్నీ ఎంచుకో</string>
   <string name="MediaOverviewActivity_collecting_attachments">జోడింపులను సేకరిస్తోంది …</string>
+  <string name="MediaOverviewActivity_Sort_by">ఆమరిక</string>
+  <string name="MediaOverviewActivity_Newest">సరికొత్త</string>
+  <string name="MediaOverviewActivity_Oldest">Oldest</string>
+  <string name="MediaOverviewActivity_Storage_used">నిల్వ ఉపయోగించబడింది</string>
+  <string name="MediaOverviewActivity_All_storage_use">అన్ని నిల్వ ఉపయోగం</string>
+  <string name="MediaOverviewActivity_Grid_view_description">సమాంతరరేఖాచట్ర దృశ్యము</string>
+  <string name="MediaOverviewActivity_List_view_description">జాబితా వీక్షణ</string>
+  <string name="MediaOverviewActivity_Selected_description">ఎంచుకున్న</string>
+  <plurals name="MediaOverviewActivity_d_items_s">
+    <item quantity="one">%1$dఅంశం%2$s</item>
+    <item quantity="other">%1$dఅంశాలను%2$s</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_d_items">
+    <item quantity="one">%1$dఅంశం</item>
+    <item quantity="other">%1$dఅంశాలను</item>
+  </plurals>
   <string name="MediaOverviewActivity_file">పత్రం</string>
   <string name="MediaOverviewActivity_audio">ఆడియో</string>
   <string name="MediaOverviewActivity_video">వీడియో</string>
   <string name="MediaOverviewActivity_image">చిత్రం</string>
+  <string name="MediaOverviewActivity_sent_by_s">పంపినది%1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">మీరు పంపారు</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">%1$sనుండి%2$sవరకు పంపబడింది</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">మీరు పంపారు%1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">పురోగతి లో Signal కాల్</string>
   <string name="NotificationBarManager__establishing_signal_call">స్థాపించబడుతున్న Signal కాల్</string>
@@ -514,10 +550,16 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">గూగుల్ ఫ్లే సేవలు ఒక్క వివరణం సరిగ్గ పని చెయ్యటంలేదు. దయచేసి  గూగుల్ ఫ్లే సేవలను మరల నెలకొల్పండి.</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_profile_name">ఖాతాదారుని పేరు</string>
+  <string name="ProfileEditNameFragment_your_profile_name_can_be_seen_by_your_contacts">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ ప్రొఫైల్ పేరును మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు చూడవచ్చు.</string>
   <string name="ProfileEditNameFragment_save">భద్రపరుచు</string>
   <!--ProfileEditOverviewFragment-->
   <string name="ProfileEditOverviewFragment_profile">రూపం</string>
+  <string name="ProfileEditOverviewFragment_profile_name">ఖాతాదారుని పేరు</string>
   <string name="ProfileEditOverviewFragment_username">వినియోగదారుడు </string>
+  <string name="ProfileEditOverviewFragment_create_a_profile_name">ప్రొఫైల్ పేరును సృష్టించండి</string>
+  <string name="ProfileEditOverviewFragment_create_a_username">ఒక వాడుక పేరు సృష్టించు</string>
+  <string name="ProfileEditOverviewFragment_your_signal_profile_can_be_seen_by">మీరు సంభాషణను ప్రారంభించినప్పుడు లేదా సంభాషణ అభ్యర్థనను అంగీకరించినప్పుడు మీ పరిచయాలు మరియు ఇతర వినియోగదారులు లేదా సమూహాలు మీ Signal ప్రొఫైల్ చూడవచ్చు.<a href="https://support.signal.org/hc/en-us/articles/360007459591-Signal-Profiles">మరింత తెలుసుకోవడానికి ఇక్కడ నొక్కండి</a>.</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">ఈ అప్లికేషన్ ని రేట్ చెయ్యండి</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">ఈ కార్యక్షేత్రం నచ్చినచొ,దయచేసి కొంత సమయము వెచ్చించి దినిని విలువ కట్టండి.</string>
@@ -585,6 +627,8 @@
   <string name="RegistrationActivity_failed_to_verify_the_captcha">CAPTCHA ని ధృవీకరించడంలో విఫలమైంది</string>
   <string name="RegistrationActivity_next">తరువాత</string>
   <string name="RegistrationActivity_continue">కొనసాగించు</string>
+  <string name="RegistrationActivity_continue_d_attempts_left">కొనసాగించండి (%dప్రయత్నాలు మిగిలి ఉన్నాయి)</string>
+  <string name="RegistrationActivity_continue_last_attempt">కొనసాగించు (చివరి ప్రయత్నం!)</string>
   <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">మీతో గోప్యతను తీసుకోండి.\nప్రతి సందేశంలో మీరే ఉండండి.</string>
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">ప్రారంభించడానికి మీ ఫోన్ నంబర్‌ను నమోదు చేయండి</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">మీరు ధృవీకరణ కోడ్‌ను అందుకుంటారు. క్యారియర్ రేట్లు వర్తించవచ్చు.</string>
@@ -685,6 +729,16 @@
   <string name="UsernameEditFragment_username">వినియోగదారుడు </string>
   <string name="UsernameEditFragment_submit">సమర్పించండి</string>
   <string name="UsernameEditFragment_delete">తొలగించండి</string>
+  <string name="UsernameEditFragment_successfully_set_username">వినియోగదారు పేరును విజయవంతంగా సెట్ చేయండి.</string>
+  <string name="UsernameEditFragment_successfully_removed_username">వినియోగదారు పేరు విజయవంతంగా తొలగించబడింది.</string>
+  <string name="UsernameEditFragment_encountered_a_network_error">నెట్‌వర్క్ లోపాన్ని ఎదుర్కొంది.</string>
+  <string name="UsernameEditFragment_this_username_is_taken">ఈ వినియోగదారు పేరు తీసుకోబడింది.</string>
+  <string name="UsernameEditFragment_this_username_is_available">ఈ వినియోగదారు పేరు అందుబాటులో ఉంది.</string>
+  <string name="UsernameEditFragment_usernames_can_only_include">వినియోగదారు పేర్లు a-Z, 0-9 మరియు అండర్ స్కోర్‌లను మాత్రమే కలిగి ఉంటాయి.</string>
+  <string name="UsernameEditFragment_usernames_cannot_begin_with_a_number">వినియోగదారు పేర్లు సంఖ్యతో ప్రారంభం కావు.</string>
+  <string name="UsernameEditFragment_username_is_invalid">మీ యూసర్ నేమ్ సరైనది కాదు.</string>
+  <string name="UsernameEditFragment_usernames_must_be_between_a_and_b_characters">వినియోగదారు పేర్లు %1$dమరియు %2$dఅక్షరాల మధ్య ఉండాలి.</string>
+  <string name="UsernameEditFragment_other_signal_users_can_send_message_requests_to_your_unique_username">ఇతర Signal వినియోగదారులు మీ ఫోన్ నంబర్ తెలియకుండానే మీ ప్రత్యేక వినియోగదారు పేరుకు సందేశ అభ్యర్థనలను పంపవచ్చు. వినియోగదారు పేరును ఎంచుకోవడం ఐచ్ఛికం.</string>
   <!--VerifyIdentityActivity-->
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">మీ పరిచయం Signal యొక్క ఒక పాత వెర్షన్ను పై నడుస్థుంది. మీ భద్రత సంఖ్య ధ్రువీకరించే ముందుగా అప్డేట్ కోరండి.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">మీ పరిచయం అననుకూల QR కోడ్ ఫార్మాట్ Signal యొక్క కొత్త సంస్కరణను అమలు చేస్తోంది. దయచేసి పోల్చడానికి అప్డేట్ చెయండీ.</string>
@@ -724,6 +778,7 @@
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">అనుమతులు లేకుండా బాహ్య నిల్వకి భద్రపరచడం సాధ్యపడలేదు</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">సందేశాన్ని తొలగించాలా?</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">ఇది శాశ్వతంగా ఈ సందేశాన్ని తొలగిస్తుంది.</string>
+  <string name="MediaPreviewActivity_s_to_s">%1$sకు%2$s</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%2$d సంభాషణలొ కొత్త %1$d సందేశాలు</string>
   <string name="MessageNotifier_most_recent_from_s">ఇటీవల నుండి: %1$s</string>
@@ -745,6 +800,7 @@
   <string name="MessageNotifier_open_signal_to_check_for_recent_notifications">ఇటీవలి నోటిఫికేషన్‌ల కోసం తనిఖీ చేయడానికి Signal ను తెరవండి.</string>
   <string name="MessageNotifier_contact_message">%1$s %2$s</string>
   <string name="MessageNotifier_unknown_contact_message">పరిచయం</string>
+  <string name="MessageNotifier_reacted_to_your_message">మీ సందేశానికి ప్రతిస్పందించారు:%1$s</string>
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">అప్రమేయం</string>
   <string name="NotificationChannel_calls">కాల్స్</string>
@@ -756,6 +812,8 @@
   <string name="NotificationChannel_group_messages">సందేశాలు</string>
   <string name="NotificationChannel_missing_display_name">తెలియని</string>
   <!--ProfileEditNameFragment-->
+  <string name="ProfileEditNameFragment_successfully_set_profile_name">ప్రొఫైల్ పేరును విజయవంతంగా సెట్ చేయండి.</string>
+  <string name="ProfileEditNameFragment_encountered_a_network_error">నెట్‌వర్క్ లోపాన్ని ఎదుర్కొంది.</string>
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal బంధించినపుడు తక్షణ స్పందన అందుబాటులొ లేదు!</string>
   <string name="QuickResponseService_problem_sending_message">సందేశాన్ని పంపడంలొ సమస్య!</string>
@@ -771,6 +829,8 @@
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">కొత్త సందేశం</string>
   <!--ThumbnailView-->
+  <string name="ThumbnailView_Play_video_description">వీడియో ప్లే చేయండి</string>
+  <string name="ThumbnailView_Has_a_caption_description">శీర్షిక ఉంది</string>
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">%d అంశం</item>
@@ -836,6 +896,8 @@
   <!--ContactSelectionListFragment-->
   <string name="ContactSelectionListFragment_signal_requires_the_contacts_permission_in_order_to_display_your_contacts">మీ పరిచయాలను ప్రదర్శించడానికి Signal కాంటాక్ట్స్ అనుమతి అవసరం, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. దయచేసి అనువర్తన సెట్టింగ్ల మెనుకి కొనసాగండి, \"అనుమతులు\" ఎంచుకోండి మరియు \"పరిచయాలు\" ప్రారంభించండి.</string>
   <string name="ContactSelectionListFragment_error_retrieving_contacts_check_your_network_connection">పరిచయాలను తిరిగి పొందడంలో లోపం, మీ నెట్వర్క్ కనెక్షన్ను తనిఖీ చేయండి</string>
+  <string name="ContactSelectionListFragment_username_not_found">వినియోగదారు పేరు కనుగొనబడలేదు</string>
+  <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" Signal యూజర్ కాదు. దయచేసి వినియోగదారు పేరును తనిఖీ చేసి, మళ్లీ ప్రయత్నించండి.</string>
   <string name="ContactSelectionListFragment_okay">సరే</string>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">నిరోధించిన పరిచయాలు లేవు</string>
@@ -1152,6 +1214,7 @@
   <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">ఒక సంభాషణ ఒక పేర్కొన్న పొడవు మించితె స్వయంచాలకంగా పాత సందేశాలను తొలగించు</string>
   <string name="preferences__delete_old_messages">పాత సందేశాలను తొలగించు</string>
   <string name="preferences__chats">ముచ్చట్లు మరియు ప్రసార మాధ్యమం</string>
+  <string name="preferences__storage">నిల్వ</string>
   <string name="preferences__conversation_length_limit">సంభాషణ విస్తృతికి పరిమితి</string>
   <string name="preferences__trim_all_conversations_now">ఇప్పుడు అన్ని సంభాషణలు  కత్తిరించి సరి చేయుట </string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">అన్ని సంభాషణలు స్కాన్ చేసి తద్వారా సంభాషణ పొడవు పరిమితులు అమలుపరచు</string>
@@ -1180,7 +1243,12 @@
   <string name="preferences_chats__when_roaming">రోమింగ్లో ఉన్నప్పుడు</string>
   <string name="preferences_chats__media_auto_download">ప్రసార మాధ్యమం దానంతట అదే దిగుమతి</string>
   <string name="preferences_chats__message_trimming">సందేశం కత్తిరించి సరి చేయుట </string>
+  <string name="preferences_storage__storage_usage">నిల్వ వినియోగం</string>
+  <string name="preferences_storage__photos">ఫోటోలు</string>
+  <string name="preferences_storage__videos">వీడియోలు</string>
+  <string name="preferences_storage__files">ఫైళ్లు</string>
   <string name="preferences_storage__audio">ఆడియో</string>
+  <string name="preferences_storage__review_storage">నిల్వను సమీక్షించండి</string>
   <string name="preferences_advanced__use_system_emoji">యంత్రము యొక్క  ఎమొజిలను  ఉపయొగించు</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Signal యొక్క అంతర్నిర్మిత ఎమోజి మద్దతును నిలిపివేయి  </string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">మీ పరిచయం మీ IP చిరునామా బహిర్గతం నివారించేందుకు Signal సర్వర్ ద్వారా అన్ని కాల్స్ ప్రసారం. సమర్ధించే కాల్ నాణ్యత తగ్గిస్తుంది.</string>
@@ -1214,6 +1282,7 @@
   <string name="conversation_callable_insecure__menu_call">కాల్</string>
   <!--conversation_callable_secure-->
   <string name="conversation_callable_secure__menu_call">Signal కాల్</string>
+  <string name="conversation_callable_secure__menu_video">Signal వీడియో కాల్</string>
   <!--conversation_context-->
   <string name="conversation_context__menu_message_details">సందేశం వివరాలు</string>
   <string name="conversation_context__menu_copy_text">మూల గ్రంథము అనుకరణ</string>
@@ -1222,6 +1291,7 @@
   <string name="conversation_context__menu_resend_message">సందేశాన్ని తిరిగి పంపు</string>
   <string name="conversation_context__menu_reply_to_message">సందేశానికి ప్రత్యుత్తరం ఇవ్వండి</string>
   <!--conversation_context_reacction-->
+  <string name="conversation_context__reaction_multi_select">బహుళ ఎంచుకోండి</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">జత పరిచినది దాచి పెట్టు </string>
   <!--conversation_expiring_off-->
@@ -1426,6 +1496,8 @@
   <string name="RegistrationLockDialog_error_connecting_to_the_service">సేవకు కనెక్ట్ చేయడంలో లోపం</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">నమోదు లాక్ పిన్ను నిలిపివేయాలా?</string>
   <string name="RegistrationLockDialog_disable">అచేతనించు</string>
+  <string name="RegistrationActivity_pin_incorrect">పిన్ తప్పు</string>
+  <string name="RegistrationActivity_you_have_d_tries_remaining">మీకు %d ప్రయత్నాలు మిగిలి ఉన్నాయి</string>
   <string name="preferences_chats__backups">ప్రత్యామ్నాయములు </string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal లాక్ చేయబడింది</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">అన్లాక్ చేయడానికి ట్యాప్ చేయండి</string>
@@ -1435,5 +1507,14 @@
   <string name="MessageRequestBottomView_accept">అంగీకరించండి</string>
   <string name="MessageRequestBottomView_delete">తొలగించండి</string>
   <string name="MessageRequestBottomView_block">నిరోధించు</string>
+  <string name="MessageRequestBottomView_do_you_want_to_let">మీరు నుండి సందేశాలను స్వీకరించాలనుకుంటున్నారా%1$s?</string>
+  <string name="MessageRequestProfileView_member_of_one_group">సభ్యుడు %1$s</string>
+  <string name="MessageRequestProfileView_member_of_two_groups">%1$sమరియు %2$sసభ్యుడు</string>
+  <string name="MessageRequestProfileView_member_of_many_groups">%1$s,%2$s, మరియు%3$s సభ్యుడు</string>
+  <string name="MessageRequestProfileView_members">%1$dసభ్యులు</string>
+  <plurals name="MessageRequestProfileView_member_of_others">
+    <item quantity="one">%dఇతర</item>
+    <item quantity="other">%dఇతరులు </item>
+  </plurals>
   <!--EOF-->
 </resources>
